# liverGAN

./: .gitignore  pyproject.toml
configs/: liqa_25d.yaml  liqa_2d.yaml  liqa_2d_t1.yaml  liqa_3d_full.yaml  liqa_3d_full_singlecard.yaml  liqa_3d_full_t1.yaml  liqa_3d_patch.yaml  liqa_3d_patch_t1.yaml  unet2d.yaml  unet3d.yaml
data/: test.txt  train.txt  val.txt
scripts/: evaluate_predictions.py  inspect_sample.py  make_mrgan_split.py  resample_sample.py  split_dataset.py  test.py  test_2d.py  test_3d.py  train.py  train_unet2d.py  train_unet3d.py  visualize_prediction.py
src/liqa_mrgan3d/: __init__.py
src/liqa_mrgan3d/data/: datasets_liqa.py  nifti_io.py  resample.py
src/liqa_mrgan3d/models/: cbam2d.py  cbam3d.py  mrgan2d.py  mrgan3d.py  pix2pix_25d.py  pix2pix_3d.py  reg2d.py  reg3d.py  transformer2d.py  transformer3d.py  unet2d.py  unet3d.py
src/liqa_mrgan3d/trainer/: __init__.py  distributed.py  liqa_2d_trainer.py  liqa_3d_trainer.py  liqa_trainer.py  losses.py
src/liqa_mrgan3d/utils/: config.py
